tests/ui/issues/issue-17337.stderr
error: use of deprecated method `Foo::foo`: text
  --> $DIR/issue-17337.rs:16:6
   |
LL |     .foo();
   |      ^^^
   |
note: the lint level is defined here
  --> $DIR/issue-17337.rs:2:9
   |
LL | #![deny(deprecated)]
   |         ^^^^^^^^^^

error: aborting due to 1 previous error

